doc: rename to README

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,11 @@
 default: clean build
 
 clean:
-	rm -f ../autoinstall-desktop.md out.temp
+	rm -f ../README.md out.temp
 
 build:
-	./build_doc.py autoinstall-desktop.md.in ../autoinstall-desktop.md
+	./build_doc.py README.md.in ../README.md
 
 test:
-	./build_doc.py autoinstall-desktop.md.in out.temp
-	diff -u ../autoinstall-desktop.md out.temp
+	./build_doc.py README.md.in out.temp
+	diff -u ../README.md out.temp
